--- a/ShoppingListProject/app/src/main/res/values/strings.xml
+++ b/ShoppingListProject/app/src/main/res/values/strings.xml
@@ -2,7 +2,11 @@
     <string name="app_name">Shopping List App</string>
     <string name="app_title">Shopping List</string>
 
-    <string name="hello_blank_fragment">Side Menu Fragment</string>
     <string name="open">Open</string>
     <string name="close">close</string>
+    <string name="no_data_available_msg">No Data Available</string>
+    <string name="my_task_fragment">My Task Fragment</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="new_task_str">New Task</string>
 </resources>
