--- a/ShoppingListProject/app/src/main/res/values/strings.xml
+++ b/ShoppingListProject/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="new_task_str">New Task</string>
+    <string name="not_req">Not Required</string>
 </resources>
